<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg"
            android:textSize="30sp"
            android:id="@+id/tvMsg"
            android:padding="@dimen/margin_10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_by"
            android:textSize="30sp"
            android:padding="@dimen/margin_10dp"
            android:id="@+id/tvSendBy"
            app:layout_constraintTop_toBottomOf="@id/tvMsg"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            android:padding="@dimen/margin_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSendBy">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:id="@+id/rbFirst"
                android:checked="true"
                android:textSize="30sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:id="@+id/rbSecond"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:textSize="30sp"/>


        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>